examples/datalog/10_edge_cases/102_rule_shadowing.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_shadow
Knowledge graph 'test_shadow' created.
Switched to knowledge graph: test_shadow
> .kg use test_shadow
Switched to knowledge graph: test_shadow
> +data[(1,), (2,)].
Inserted 2 fact(s) into 'data'.
> +data(X) :- data(Y), X = Y + 10.
Script error: Failed to register rule: Unsafe rule 'data': Head variable(s) X not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
