examples/datalog/10_edge_cases/102_rule_shadowing.dl
% Test: Rule with same name as base relation
% Expected: Rule extends base facts
% Category: 10_edge_cases
% Priority: P2 - Edge cases

.kg create test_shadow
.kg use test_shadow

+data[(1,), (2,)].

% Rule adds more to 'data' relation
+data(X) :- data(Y), X = Y + 10.

?- data(X).

.kg use default
.kg drop test_shadow
